# new-alphabet

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE_NOTES_TEMPLATE.md  ROADMAP.md  code_review_guidelines.md  documentation.md  prd.json  prd_v1.json  progress.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/demo-blog/: Cargo.toml  README.md
apps/demo-blog/site/: index.html
apps/demo-blog/site/articles/: archive-discipline.html  grid-law.html
apps/demo-blog/site/assets/: new-alphabet.css
apps/demo-blog/src/: lib.rs  main.rs
apps/demo-saas/: Cargo.toml  README.md
apps/demo-saas/site/: index.html
apps/demo-saas/site/assets/: new-alphabet.css
apps/demo-saas/site/review/: index.html
apps/demo-saas/site/search/: index.html
apps/demo-saas/site/settings/: index.html
apps/demo-saas/src/: lib.rs  main.rs
apps/docs/: Cargo.toml
apps/docs/site/: index.html
apps/docs/src/: main.rs
crates/new-alphabet-agent/: Cargo.toml
crates/new-alphabet-agent/src/: lib.rs
crates/new-alphabet-cli/: Cargo.toml
crates/new-alphabet-cli/src/: lib.rs  main.rs  site.rs  templates.rs
crates/new-alphabet-components/: Cargo.toml
crates/new-alphabet-components/src/: accessibility.rs  actions.rs  choices.rs  data_display.rs  examples.rs  fields.rs  lib.rs  status.rs  workflow.rs
crates/new-alphabet-core/: Cargo.toml
crates/new-alphabet-core/src/: contract.rs  lib.rs  project.rs  validation.rs
crates/new-alphabet-foundation/: Cargo.toml
crates/new-alphabet-foundation/src/: density.rs  grid.rs  lib.rs  spacing.rs  stylesheet.rs  surface.rs  typography.rs
crates/new-alphabet-primitives/: Cargo.toml
crates/new-alphabet-primitives/src/: composition.rs  examples.rs  frame.rs  lib.rs  surfaces.rs
crates/new-alphabet-recipes/: Cargo.toml
crates/new-alphabet-recipes/src/: editorial.rs  lib.rs  workflow.rs
crates/new-alphabet-schema/: Cargo.toml
crates/new-alphabet-schema/src/: catalog.rs  lib.rs  validate.rs
docs/: agent-contract.md  agent-quickstart.md  cli.md  components.md  contributing.md  flavors.md  foundations.md  getting-started.md  gridnik-tightening-spec.md  primitives.md  recipes.md  release-notes.md  roadmap.md  status.md  validation.md  workbench-policy.md
examples/: README.md  primitive-composition.json
examples/greenfield-blog/: Cargo.toml  README.md  new-alphabet.json  validate.txt
examples/greenfield-blog/src/: main.rs
examples/greenfield-blog/src/new_alphabet/: mod.rs
examples/greenfield-blog/src/new_alphabet/recipes/: blog_index.rs  mod.rs
examples/greenfield-workspace/: Cargo.toml  README.md  new-alphabet.json  validate.txt
examples/greenfield-workspace/src/: main.rs
examples/greenfield-workspace/src/new_alphabet/recipes/: mod.rs  review_queue.rs
examples/validation/: README.md  invalid-review-queue.json  invalid-review-queue.txt
prompts/: README.md  high-review-workspace.md  moderate-review-workspace.md  session-bootstrap.md  sparse-blog.md
schemas/: README.md  anti-patterns.json  components.json  components.schema.json  composition-rules.json  context-bundle-0.1.0.json  contract-bundle.schema.json  examples.json  flavors.json  flavors.schema.json  foundations.json  foundations.schema.json  primitives.json  primitives.schema.json  project.schema.json  prompt-intents.json  recipes.json  recipes.schema.json  state-contracts.json  validation-rules.json
scripts/: README.md  build-demo-sites.sh  export-public-artifacts.sh  validate-workspace.sh
