[workspace]
members = [
    "apps/docs",
    "apps/demo-blog",
    "apps/demo-saas",
    "crates/new-alphabet-cli",
    "crates/new-alphabet-components",
    "crates/new-alphabet-core",
    "crates/new-alphabet-foundation",
    "crates/new-alphabet-primitives",
    "crates/new-alphabet-recipes",
    "crates/new-alphabet-schema",
]
resolver = "2"
