[package]
name = "new-alphabet-cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Command-line interface for New Alphabet."
repository = "https://github.com/recluse-studio/new-alphabet"

[[bin]]
name = "new-alphabet"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.8.17", features = ["ssr"] }
new-alphabet-components = { path = "../new-alphabet-components" }
new-alphabet-core = { path = "../new-alphabet-core" }
new-alphabet-foundation = { path = "../new-alphabet-foundation" }
new-alphabet-recipes = { path = "../new-alphabet-recipes" }
new-alphabet-schema = { path = "../new-alphabet-schema" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
