[package]
name = "new-alphabet-components"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Semantic Leptos components for New Alphabet."
repository = "https://github.com/recluse-studio/new-alphabet"

[dependencies]
leptos = { version = "0.8.17", features = ["ssr"] }
new-alphabet-foundation = { path = "../new-alphabet-foundation" }
new-alphabet-primitives = { path = "../new-alphabet-primitives" }
