[package]
name = "new-alphabet-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Shared contract and validation types for New Alphabet."
repository = "https://github.com/recluse-studio/new-alphabet"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
