[package]
name = "new-alphabet-primitives"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Structural Leptos primitives for New Alphabet."
repository = "https://github.com/recluse-studio/new-alphabet"

[dependencies]
leptos = { version = "0.8.17", features = ["ssr"] }
new-alphabet-foundation = { path = "../new-alphabet-foundation" }
